--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Eugene Serb – Redirect</title>
+    <title>Eugene Serb â€“ Redirect</title>
     <meta charset="UTF-8" />
     <meta http-equiv="refresh" content="0; URL=https://eugene-serb.github.io/" />
 </head>
 <body>
 </body>
 </html>
+
